force-app/main/default/objects/XFTY_Settings__c/XFTY_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Per-org / per-profile / per-user XFTY behaviour toggles. Read via getInstance() - no SOQL.</description>
    <label>XFTY Settings</label>
</CustomObject>