force-app/main/default/objects/XFTY_Settings__c/fields/LimitWarningsDisabled__c.field-meta.xml
<CustomField>
    <fullName>LimitWarningsDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, XFTY does not warn even if generating test data consumes most of a governor limit.</description>
    <label>Limit Warnings Disabled</label>
    <type>Checkbox</type>
</CustomField>