force-app/main/default/objects/XFTY_Settings__c/fields/LimitWarnSoftPercent__c.field-meta.xml
<CustomField>
    <fullName>LimitWarnSoftPercent__c</fullName>
    <description>Warn when generation consumes at least this percent (0-100) of a governor limit. Blank uses the built-in default.</description>
    <label>Limit Warn Soft Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>